# mtuq

./: LICENSE  README.md  env.yaml  env_arm64.yaml  env_default.yaml  pyproject.toml  setup.py
.github/workflows/: python-app.yaml
docs/: push.bash  quick_start.rst  references.rst
docs/install/: arm64.rst  c_ext.rst  graphics.rst  index.rst  issues.rst  virtualenv.rst
docs/user_guide/: 01.rst  02.rst  03.rst  04.rst  05.rst  06.rst
docs/user_guide/02/: devel.rst  notes.rst
docs/user_guide/03/: receiver_side.rst  source_side.rst
docs/user_guide/05/: gallery_force.rst  gallery_mt.rst  gallery_origin.rst
docs/user_guide/06/: custom_backends.rst  customizing_figures.rst  grid_structures.rst  moment_tensor_and_force_grids.rst  plotting_trace_attributes.rst  trace_attributes.rst
examples/: DetailedAnalysis.py  GridSearch.DoubleCouple+Magnitude+Depth.py  GridSearch.DoubleCouple+Magnitude+Hypocenter.py  GridSearch.DoubleCouple.py  GridSearch.FullMomentTensor.py  SerialGridSearch.DoubleCouple.py  Waveforms+Polarities.py
mtuq/: __init__.py  grid_search.py  process_data.py
mtuq/graphics/: __init__.py  _matplotlib.py  _pygmt.py  attrs.py  beachball.py  header.py  waveforms.py
mtuq/graphics/uq/: _matplotlib.py  force.py  lune.py  omega.py  vw.py
mtuq/grid/: base.py  force.py  moment_tensor.py
mtuq/io/clients/: FK_SAC.py  syngine.py
mtuq/misfit/: polarity.py
mtuq/misfit/waveform/: __init__.py  cython_L2.pyx  ext_numba.py  level2.py  numba_L2.py  numba_L2.py_exclude
mtuq/util/: __init__.py  gallery.py  math.py  syngine.py
setup/: code_generator.py
tests/: benchmark_cap_vs_mtuq.py  check_examples.bash  install_conda.bash  install_miniconda.bash  install_miniforge.bash  test_graphics.py  test_greens_SPECFEM3D_SAC.py  test_grid_search_mt.py  test_grid_search_mt_depth.py  test_mij.py  test_misfit.py
